kubernetes/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: lks-irs
    environment: monitoring
